--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.latihan">
 
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.CHANGE_WIFI_STATE"/>
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -13,11 +15,6 @@
         <activity android:name=".ChildFragment1" />
         <activity android:name=".home_viewpager" />
         <activity android:name=".ViewPagerAdapter" />
-        <activity android:name=".PesanKeluar_Viewpager" />
-        <activity android:name=".PesanMasuk_Viewpager" />
-        <activity android:name=".viewPager" />
-        <activity android:name=".penampung_viewpager" />
-        <activity android:name=".about_viewpager" />
         <activity android:name=".Coba_Fragment" />
         <activity
             android:name=".Home"
@@ -34,10 +31,15 @@
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <receiver android:name=".home_viewpager" >
+            <intent-filter>
+                <action android:name="android.net.conn.CONNECTIVITY_CHANGE" />
+            </intent-filter>
+        </receiver>
     </application>
 
 </manifest>
