--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,5 +30,8 @@ dependencies {
     implementation 'androidx.recyclerview:recyclerview:1.1.0-beta04'
     implementation 'com.google.firebase:firebase-analytics:17.2.0'
     implementation 'com.google.firebase:firebase-firestore:21.2.1'
+    implementation 'com.google.firebase:firebase-core:17.2.1'
+    implementation 'com.firebaseui:firebase-ui-firestore:4.3.1'
+    implementation "com.firebaseui:firebase-ui-auth:3.0.0"
 }
 apply plugin: 'com.google.gms.google-services'
